code/java/RealTimeNews/v4/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Real-Time News client library for Java

[![API Version](https://img.shields.io/badge/api-v4.0.0-blue)](https://developer.factset.com/api-catalog/)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/realtimenews/0.20.3)](https://central.sonatype.com/artifact/com.factset.sdk/realtimenews/0.20.3)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet’s StreetAccount news and 3rd party content through an API that seamlessly integrates with
[quotes](https://developer.factset.com/api-catalog/real-time-quotes-api),
[time series](https://developer.factset.com/api-catalog/real-time-time-series-api),
[watchlists](https://developer.factset.com/api-catalog/watchlist-api-digital-portals), and other Functional APIs.

Search for news articles from various news distributors and publishers. Incorporate a multitude of search parameters such as region, category, source, article type and provider-specific meta data, to easily filter out the noise.

All search and list endpoints can be subscribed to receive streamed updates.

News providers include:

* APA
* AWP 
* Businesswire
* Cercle Finance
* Direkt News SE
* Dow Jones News
* dpa
* dpa-AFX 
* EUWAX
* GlobenewsWire
* Kauppalehti
* MT Newswires
* MoneyAM
* newsaktuell
* OMX
* PR Newswire 
* Ritzau Finans
* StreetAccount News
* TDN News
      
See the [Real-Time Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api) for access to detailed
price and performance information, plus basic support for security identifier cross-reference.


This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 4.0.0
- SDK version: 0.20.3
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>realtimenews</artifactId>
  <version>0.20.3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:realtimenews:0.20.3"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.RealTimeNews.*;
import com.factset.sdk.RealTimeNews.auth.*;
import com.factset.sdk.RealTimeNews.models.*;
import com.factset.sdk.RealTimeNews.api.BasicApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class BasicApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        BasicApi apiInstance = new BasicApi(defaultClient);
        java.util.Set<String> attributes = Arrays.asList(); // java.util.Set<String> | Limit the attributes returned in the response to the specified set.
        try {
            InlineResponse200 result = apiInstance.getBasicAssetClassList(attributes);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling BasicApi#getBasicAssetClassList");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.RealTimeNews.*;
import com.factset.sdk.RealTimeNews.api.BasicApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

BasicApi apiInstance = new BasicApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.RealTimeNews.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BasicApi* | [**getBasicAssetClassList**](docs/BasicApi.md#getBasicAssetClassList) | **GET** /basic/asset-class/list | List of asset classes.
*BasicApi* | [**getBasicBenchmarkTypeList**](docs/BasicApi.md#getBasicBenchmarkTypeList) | **GET** /basic/benchmark/type/list | List of benchmark types.
*BasicApi* | [**getBasicFrequencyTypeList**](docs/BasicApi.md#getBasicFrequencyTypeList) | **GET** /basic/frequency/type/list | List of frequency types.
*BasicApi* | [**getBasicLanguageGet**](docs/BasicApi.md#getBasicLanguageGet) | **GET** /basic/language/get | Details for a language.
*BasicApi* | [**getBasicLanguageGetByCode**](docs/BasicApi.md#getBasicLanguageGetByCode) | **GET** /basic/language/get-by-code | Details for a language identified by code.
*BasicApi* | [**getBasicLanguageList**](docs/BasicApi.md#getBasicLanguageList) | **GET** /basic/language/list | List of languages.
*BasicApi* | [**getBasicMarketGet**](docs/BasicApi.md#getBasicMarketGet) | **GET** /basic/market/get | Details of a market.
*BasicApi* | [**getBasicMarketGroupList**](docs/BasicApi.md#getBasicMarketGroupList) | **GET** /basic/market/group/list | List of market groups.
*BasicApi* | [**getBasicMarketTypeList**](docs/BasicApi.md#getBasicMarketTypeList) | **GET** /basic/market/type/list | List of market types.
*BasicApi* | [**getBasicMediaKindList**](docs/BasicApi.md#getBasicMediaKindList) | **GET** /basic/media/kind/list | List of media kinds.
*BasicApi* | [**getBasicRegionContinentGet**](docs/BasicApi.md#getBasicRegionContinentGet) | **GET** /basic/region/continent/get | Details for a continent.
*BasicApi* | [**getBasicRegionContinentList**](docs/BasicApi.md#getBasicRegionContinentList) | **GET** /basic/region/continent/list | List of continents.
*BasicApi* | [**getBasicRegionCountryGet**](docs/BasicApi.md#getBasicRegionCountryGet) | **GET** /basic/region/country/get | Details for a country.
*BasicApi* | [**getBasicRegionCountryGetByCode**](docs/BasicApi.md#getBasicRegionCountryGetByCode) | **GET** /basic/region/country/get-by-code | Details for a country identified by code.
*BasicApi* | [**getBasicRegionCountryList**](docs/BasicApi.md#getBasicRegionCountryList) | **GET** /basic/region/country/list | List of countries.
*BasicApi* | [**getBasicRegionGet**](docs/BasicApi.md#getBasicRegionGet) | **GET** /basic/region/get | Details for a region.
*BasicApi* | [**getBasicRegionList**](docs/BasicApi.md#getBasicRegionList) | **GET** /basic/region/list | List of regions.
*BasicApi* | [**getBasicTimezoneGet**](docs/BasicApi.md#getBasicTimezoneGet) | **GET** /basic/timezone/get | Details of a timezone.
*BasicApi* | [**getBasicTimezoneGetByName**](docs/BasicApi.md#getBasicTimezoneGetByName) | **GET** /basic/timezone/get-by-name | Details of a timezone identified by name.
*BasicApi* | [**getBasicValueUnitAlternativeList**](docs/BasicApi.md#getBasicValueUnitAlternativeList) | **GET** /basic/value-unit/alternative/list | List of alternative units.
*BasicApi* | [**getBasicValueUnitCurrencyFractionalGet**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalGet) | **GET** /basic/value-unit/currency/fractional/get | Details of a fractional currency.
*BasicApi* | [**getBasicValueUnitCurrencyFractionalList**](docs/BasicApi.md#getBasicValueUnitCurrencyFractionalList) | **GET** /basic/value-unit/currency/fractional/list | List of fractional currencies.
*BasicApi* | [**getBasicValueUnitGet**](docs/BasicApi.md#getBasicValueUnitGet) | **GET** /basic/value-unit/get | Details of a value unit.
*BasicApi* | [**postBasicBackgroundTextTypeList**](docs/BasicApi.md#postBasicBackgroundTextTypeList) | **POST** /basic/background-text/type/list | List of background text types.
*BasicApi* | [**postBasicDeliveryList**](docs/BasicApi.md#postBasicDeliveryList) | **POST** /basic/delivery/list | List of deliveries.
*BasicApi* | [**postBasicMarketList**](docs/BasicApi.md#postBasicMarketList) | **POST** /basic/market/list | List of markets.
*BasicApi* | [**postBasicMediaTypeList**](docs/BasicApi.md#postBasicMediaTypeList) | **POST** /basic/media/type/list | List of Internet media types.
*BasicApi* | [**postBasicMicOperatingList**](docs/BasicApi.md#postBasicMicOperatingList) | **POST** /basic/mic/operating/list | List of operating market identifier codes (MIC).
*BasicApi* | [**postBasicTimezoneList**](docs/BasicApi.md#postBasicTimezoneList) | **POST** /basic/timezone/list | List of timezones.
*BasicApi* | [**postBasicValueUnitCurrencyList**](docs/BasicApi.md#postBasicValueUnitCurrencyList) | **POST** /basic/value-unit/currency/list | List of currencies.
*BasicApi* | [**postBasicValueUnitCurrencyMainList**](docs/BasicApi.md#postBasicValueUnitCurrencyMainList) | **POST** /basic/value-unit/currency/main/list | List of main currencies.
*BasicApi* | [**postBasicValueUnitList**](docs/BasicApi.md#postBasicValueUnitList) | **POST** /basic/value-unit/list | List of value units.
*CategoryApi* | [**getCategoryDatasetList**](docs/CategoryApi.md#getCategoryDatasetList) | **GET** /category/dataset/list | List of entitled category datasets.
*CategoryApi* | [**getCategoryGet**](docs/CategoryApi.md#getCategoryGet) | **GET** /category/get | Details of a category.
*CategoryApi* | [**getCategoryInstrumentList**](docs/CategoryApi.md#getCategoryInstrumentList) | **GET** /category/instrument/list | List of instruments where a specific dataset has assigned a given category.
*CategoryApi* | [**getCategoryLevelGet**](docs/CategoryApi.md#getCategoryLevelGet) | **GET** /category/level/get | Details of a category level.
*CategoryApi* | [**getCategoryList**](docs/CategoryApi.md#getCategoryList) | **GET** /category/list | List of categories.
*CategoryApi* | [**getCategoryListByLevel**](docs/CategoryApi.md#getCategoryListByLevel) | **GET** /category/list-by-level | List of categories assigned to a category level.
*CategoryApi* | [**getCategoryListBySystem**](docs/CategoryApi.md#getCategoryListBySystem) | **GET** /category/list-by-system | List of categories assigned to a category system.
*CategoryApi* | [**getCategoryPathGet**](docs/CategoryApi.md#getCategoryPathGet) | **GET** /category/path/get | Path from the first level to the level of a specific category.
*CategoryApi* | [**getCategorySystemGet**](docs/CategoryApi.md#getCategorySystemGet) | **GET** /category/system/get | Details of an entitled category system.
*CategoryApi* | [**getCategorySystemList**](docs/CategoryApi.md#getCategorySystemList) | **GET** /category/system/list | List of entitled category systems.
*CategoryApi* | [**getCategorySystemTypeList**](docs/CategoryApi.md#getCategorySystemTypeList) | **GET** /category/system/type/list | List of category system types.
*NewsApi* | [**getNewsArticleGet**](docs/NewsApi.md#getNewsArticleGet) | **GET** /news/article/get | Details for a news article.
*NewsApi* | [**getNewsArticleTypeGet**](docs/NewsApi.md#getNewsArticleTypeGet) | **GET** /news/article/type/get | Details for a news article type.
*NewsApi* | [**getNewsArticleTypeList**](docs/NewsApi.md#getNewsArticleTypeList) | **GET** /news/article/type/list | List of news article types.
*NewsApi* | [**getNewsDistributorGet**](docs/NewsApi.md#getNewsDistributorGet) | **GET** /news/distributor/get | Details of a distributor.
*NewsApi* | [**getNewsDistributorList**](docs/NewsApi.md#getNewsDistributorList) | **GET** /news/distributor/list | List of distributors.
*NewsApi* | [**getNewsPublisherGet**](docs/NewsApi.md#getNewsPublisherGet) | **GET** /news/publisher/get | Details of a publisher.
*NewsApi* | [**getNewsPublisherList**](docs/NewsApi.md#getNewsPublisherList) | **GET** /news/publisher/list | List of publishers.
*NewsApi* | [**getNewsPublisherListByDistributor**](docs/NewsApi.md#getNewsPublisherListByDistributor) | **GET** /news/publisher/list-by-distributor | List of publishers provided by the given distributor.
*NewsApi* | [**postNewsArticleList**](docs/NewsApi.md#postNewsArticleList) | **POST** /news/article/list | List of news articles.
*NewsApi* | [**postNewsArticleListByChain**](docs/NewsApi.md#postNewsArticleListByChain) | **POST** /news/article/list-by-chain | List news articles of an article chain.
*NewsApi* | [**postNewsArticleListByIndex**](docs/NewsApi.md#postNewsArticleListByIndex) | **POST** /news/article/list-by-index | News articles for instruments that are constituents of the given indices.
*NewsApi* | [**postNewsArticleListByInstrument**](docs/NewsApi.md#postNewsArticleListByInstrument) | **POST** /news/article/list-by-instrument | News articles for instruments.
*NewsApi* | [**postNewsArticleListByMediaKind**](docs/NewsApi.md#postNewsArticleListByMediaKind) | **POST** /news/article/list-by-media-kind | List news articles which contain media of specific media kinds.
*NewsApi* | [**postNewsArticleSearchByText**](docs/NewsApi.md#postNewsArticleSearchByText) | **POST** /news/article/search-by-text | Search for news articles using a fulltext search.
*NewsApi* | [**postNewsPublisherSearchByName**](docs/NewsApi.md#postNewsPublisherSearchByName) | **POST** /news/publisher/search-by-name | Search for publishers.


## Documentation for Models

 - [CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [GetBasicAssetClassListDataItems](docs/GetBasicAssetClassListDataItems.md)
 - [GetBasicBenchmarkTypeListDataItems](docs/GetBasicBenchmarkTypeListDataItems.md)
 - [GetBasicFrequencyTypeListDataItems](docs/GetBasicFrequencyTypeListDataItems.md)
 - [GetBasicLanguageListDataItems](docs/GetBasicLanguageListDataItems.md)
 - [GetBasicMarketGroupListDataItems](docs/GetBasicMarketGroupListDataItems.md)
 - [GetBasicMarketTypeListDataItems](docs/GetBasicMarketTypeListDataItems.md)
 - [GetBasicMediaKindListDataItems](docs/GetBasicMediaKindListDataItems.md)
 - [GetBasicRegionContinentGetDataCountriesItems](docs/GetBasicRegionContinentGetDataCountriesItems.md)
 - [GetBasicRegionContinentListDataItems](docs/GetBasicRegionContinentListDataItems.md)
 - [GetBasicRegionCountryGetByCodeDataSubdivisionsItems](docs/GetBasicRegionCountryGetByCodeDataSubdivisionsItems.md)
 - [GetBasicRegionCountryGetDataSubdivisionsItems](docs/GetBasicRegionCountryGetDataSubdivisionsItems.md)
 - [GetBasicRegionCountryListDataItems](docs/GetBasicRegionCountryListDataItems.md)
 - [GetBasicRegionGetDataNestedRegionsItems](docs/GetBasicRegionGetDataNestedRegionsItems.md)
 - [GetBasicRegionListDataItems](docs/GetBasicRegionListDataItems.md)
 - [GetBasicValueUnitAlternativeListDataItems](docs/GetBasicValueUnitAlternativeListDataItems.md)
 - [GetBasicValueUnitCurrencyFractionalListDataItems](docs/GetBasicValueUnitCurrencyFractionalListDataItems.md)
 - [GetBasicValueUnitCurrencyFractionalListDataItemsMainCurrency](docs/GetBasicValueUnitCurrencyFractionalListDataItemsMainCurrency.md)
 - [GetCategoryDatasetListDataItems](docs/GetCategoryDatasetListDataItems.md)
 - [GetCategoryDatasetListDataItemsDelivery](docs/GetCategoryDatasetListDataItemsDelivery.md)
 - [GetCategoryDatasetListDataItemsSystem](docs/GetCategoryDatasetListDataItemsSystem.md)
 - [GetCategoryInstrumentListDataItems](docs/GetCategoryInstrumentListDataItems.md)
 - [GetCategoryListByLevelDataCategoriesItems](docs/GetCategoryListByLevelDataCategoriesItems.md)
 - [GetCategoryListByLevelDataCategoriesItemsParent](docs/GetCategoryListByLevelDataCategoriesItemsParent.md)
 - [GetCategoryListBySystemDataCategoriesItems](docs/GetCategoryListBySystemDataCategoriesItems.md)
 - [GetCategoryListBySystemDataCategoriesItemsLevel](docs/GetCategoryListBySystemDataCategoriesItemsLevel.md)
 - [GetCategoryListBySystemDataCategoriesItemsParent](docs/GetCategoryListBySystemDataCategoriesItemsParent.md)
 - [GetCategoryListDataCategoriesItems](docs/GetCategoryListDataCategoriesItems.md)
 - [GetCategoryListDataCategoriesItemsLevel](docs/GetCategoryListDataCategoriesItemsLevel.md)
 - [GetCategoryListDataCategoriesItemsParent](docs/GetCategoryListDataCategoriesItemsParent.md)
 - [GetCategoryPathGetDataCategoriesItems](docs/GetCategoryPathGetDataCategoriesItems.md)
 - [GetCategorySystemGetDataLevelsItems](docs/GetCategorySystemGetDataLevelsItems.md)
 - [GetCategorySystemListDataItems](docs/GetCategorySystemListDataItems.md)
 - [GetCategorySystemListDataItemsType](docs/GetCategorySystemListDataItemsType.md)
 - [GetCategorySystemTypeListDataItems](docs/GetCategorySystemTypeListDataItems.md)
 - [GetNewsArticleGetDataCategoriesItems](docs/GetNewsArticleGetDataCategoriesItems.md)
 - [GetNewsArticleGetDataInstrumentsItems](docs/GetNewsArticleGetDataInstrumentsItems.md)
 - [GetNewsArticleGetDataMediaItems](docs/GetNewsArticleGetDataMediaItems.md)
 - [GetNewsArticleGetDataTypesItems](docs/GetNewsArticleGetDataTypesItems.md)
 - [GetNewsArticleTypeListDataItems](docs/GetNewsArticleTypeListDataItems.md)
 - [GetNewsDistributorListDataItems](docs/GetNewsDistributorListDataItems.md)
 - [GetNewsDistributorListDataItemsDelivery](docs/GetNewsDistributorListDataItemsDelivery.md)
 - [GetNewsPublisherListByDistributorDataItems](docs/GetNewsPublisherListByDistributorDataItems.md)
 - [GetNewsPublisherListDataItems](docs/GetNewsPublisherListDataItems.md)
 - [GetNewsPublisherListDataItemsDistributor](docs/GetNewsPublisherListDataItemsDistributor.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse20010](docs/InlineResponse20010.md)
 - [InlineResponse20011](docs/InlineResponse20011.md)
 - [InlineResponse20012](docs/InlineResponse20012.md)
 - [InlineResponse20013](docs/InlineResponse20013.md)
 - [InlineResponse20014](docs/InlineResponse20014.md)
 - [InlineResponse20015](docs/InlineResponse20015.md)
 - [InlineResponse20015Data](docs/InlineResponse20015Data.md)
 - [InlineResponse20016](docs/InlineResponse20016.md)
 - [InlineResponse20017](docs/InlineResponse20017.md)
 - [InlineResponse20017Data](docs/InlineResponse20017Data.md)
 - [InlineResponse20018](docs/InlineResponse20018.md)
 - [InlineResponse20019](docs/InlineResponse20019.md)
 - [InlineResponse20019Data](docs/InlineResponse20019Data.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse20020](docs/InlineResponse20020.md)
 - [InlineResponse20020Data](docs/InlineResponse20020Data.md)
 - [InlineResponse20021](docs/InlineResponse20021.md)
 - [InlineResponse20022](docs/InlineResponse20022.md)
 - [InlineResponse20022Data](docs/InlineResponse20022Data.md)
 - [InlineResponse20023](docs/InlineResponse20023.md)
 - [InlineResponse20023Data](docs/InlineResponse20023Data.md)
 - [InlineResponse20024](docs/InlineResponse20024.md)
 - [InlineResponse20025](docs/InlineResponse20025.md)
 - [InlineResponse20025Data](docs/InlineResponse20025Data.md)
 - [InlineResponse20026](docs/InlineResponse20026.md)
 - [InlineResponse20027](docs/InlineResponse20027.md)
 - [InlineResponse20028](docs/InlineResponse20028.md)
 - [InlineResponse20029](docs/InlineResponse20029.md)
 - [InlineResponse20029Data](docs/InlineResponse20029Data.md)
 - [InlineResponse20029DataMainCurrency](docs/InlineResponse20029DataMainCurrency.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse20030](docs/InlineResponse20030.md)
 - [InlineResponse20031](docs/InlineResponse20031.md)
 - [InlineResponse20032](docs/InlineResponse20032.md)
 - [InlineResponse20032Data](docs/InlineResponse20032Data.md)
 - [InlineResponse20032DataLevel](docs/InlineResponse20032DataLevel.md)
 - [InlineResponse20032DataParent](docs/InlineResponse20032DataParent.md)
 - [InlineResponse20032DataParentLevel](docs/InlineResponse20032DataParentLevel.md)
 - [InlineResponse20032DataSystem](docs/InlineResponse20032DataSystem.md)
 - [InlineResponse20033](docs/InlineResponse20033.md)
 - [InlineResponse20033Data](docs/InlineResponse20033Data.md)
 - [InlineResponse20033DataSystem](docs/InlineResponse20033DataSystem.md)
 - [InlineResponse20034](docs/InlineResponse20034.md)
 - [InlineResponse20034Data](docs/InlineResponse20034Data.md)
 - [InlineResponse20034DataParent](docs/InlineResponse20034DataParent.md)
 - [InlineResponse20034DataSystem](docs/InlineResponse20034DataSystem.md)
 - [InlineResponse20034Meta](docs/InlineResponse20034Meta.md)
 - [InlineResponse20035](docs/InlineResponse20035.md)
 - [InlineResponse20035Data](docs/InlineResponse20035Data.md)
 - [InlineResponse20036](docs/InlineResponse20036.md)
 - [InlineResponse20037](docs/InlineResponse20037.md)
 - [InlineResponse20037Meta](docs/InlineResponse20037Meta.md)
 - [InlineResponse20038](docs/InlineResponse20038.md)
 - [InlineResponse20038Data](docs/InlineResponse20038Data.md)
 - [InlineResponse20038DataSystem](docs/InlineResponse20038DataSystem.md)
 - [InlineResponse20039](docs/InlineResponse20039.md)
 - [InlineResponse20039Data](docs/InlineResponse20039Data.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse20040](docs/InlineResponse20040.md)
 - [InlineResponse20040Data](docs/InlineResponse20040Data.md)
 - [InlineResponse20040DataType](docs/InlineResponse20040DataType.md)
 - [InlineResponse20041](docs/InlineResponse20041.md)
 - [InlineResponse20042](docs/InlineResponse20042.md)
 - [InlineResponse20043](docs/InlineResponse20043.md)
 - [InlineResponse20043Data](docs/InlineResponse20043Data.md)
 - [InlineResponse20043DataDistributor](docs/InlineResponse20043DataDistributor.md)
 - [InlineResponse20043DataLanguage](docs/InlineResponse20043DataLanguage.md)
 - [InlineResponse20043DataPublisher](docs/InlineResponse20043DataPublisher.md)
 - [InlineResponse20044](docs/InlineResponse20044.md)
 - [InlineResponse20044Meta](docs/InlineResponse20044Meta.md)
 - [InlineResponse20045](docs/InlineResponse20045.md)
 - [InlineResponse20045Data](docs/InlineResponse20045Data.md)
 - [InlineResponse20045DataDistributor](docs/InlineResponse20045DataDistributor.md)
 - [InlineResponse20045DataPublisher](docs/InlineResponse20045DataPublisher.md)
 - [InlineResponse20046](docs/InlineResponse20046.md)
 - [InlineResponse20046Data](docs/InlineResponse20046Data.md)
 - [InlineResponse20047](docs/InlineResponse20047.md)
 - [InlineResponse20047Data](docs/InlineResponse20047Data.md)
 - [InlineResponse20048](docs/InlineResponse20048.md)
 - [InlineResponse20049](docs/InlineResponse20049.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse20050](docs/InlineResponse20050.md)
 - [InlineResponse20050Data](docs/InlineResponse20050Data.md)
 - [InlineResponse20051](docs/InlineResponse20051.md)
 - [InlineResponse20052](docs/InlineResponse20052.md)
 - [InlineResponse20052Data](docs/InlineResponse20052Data.md)
 - [InlineResponse20052DataDelivery](docs/InlineResponse20052DataDelivery.md)
 - [InlineResponse20053](docs/InlineResponse20053.md)
 - [InlineResponse20054](docs/InlineResponse20054.md)
 - [InlineResponse20054Data](docs/InlineResponse20054Data.md)
 - [InlineResponse20054DataDistributor](docs/InlineResponse20054DataDistributor.md)
 - [InlineResponse20055](docs/InlineResponse20055.md)
 - [InlineResponse20056](docs/InlineResponse20056.md)
 - [InlineResponse20057](docs/InlineResponse20057.md)
 - [InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [InlineResponse2006](docs/InlineResponse2006.md)
 - [InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [InlineResponse2007](docs/InlineResponse2007.md)
 - [InlineResponse2008](docs/InlineResponse2008.md)
 - [InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [InlineResponse2008DataCountry](docs/InlineResponse2008DataCountry.md)
 - [InlineResponse2008DataGroup](docs/InlineResponse2008DataGroup.md)
 - [InlineResponse2008DataTimezone](docs/InlineResponse2008DataTimezone.md)
 - [InlineResponse2008DataType](docs/InlineResponse2008DataType.md)
 - [InlineResponse2009](docs/InlineResponse2009.md)
 - [InlineResponse2009Meta](docs/InlineResponse2009Meta.md)
 - [InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [PartialOutputObject](docs/PartialOutputObject.md)
 - [PostBasicBackgroundTextTypeListDataItems](docs/PostBasicBackgroundTextTypeListDataItems.md)
 - [PostBasicBackgroundTextTypeListRequest](docs/PostBasicBackgroundTextTypeListRequest.md)
 - [PostBasicBackgroundTextTypeListRequestData](docs/PostBasicBackgroundTextTypeListRequestData.md)
 - [PostBasicBackgroundTextTypeListRequestDataFilter](docs/PostBasicBackgroundTextTypeListRequestDataFilter.md)
 - [PostBasicBackgroundTextTypeListRequestMeta](docs/PostBasicBackgroundTextTypeListRequestMeta.md)
 - [PostBasicDeliveryListDataItems](docs/PostBasicDeliveryListDataItems.md)
 - [PostBasicDeliveryListRequest](docs/PostBasicDeliveryListRequest.md)
 - [PostBasicDeliveryListRequestData](docs/PostBasicDeliveryListRequestData.md)
 - [PostBasicDeliveryListRequestDataFilter](docs/PostBasicDeliveryListRequestDataFilter.md)
 - [PostBasicDeliveryListRequestMeta](docs/PostBasicDeliveryListRequestMeta.md)
 - [PostBasicMarketListDataItems](docs/PostBasicMarketListDataItems.md)
 - [PostBasicMarketListDataItemsCountry](docs/PostBasicMarketListDataItemsCountry.md)
 - [PostBasicMarketListDataItemsGroup](docs/PostBasicMarketListDataItemsGroup.md)
 - [PostBasicMarketListDataItemsTimezone](docs/PostBasicMarketListDataItemsTimezone.md)
 - [PostBasicMarketListDataItemsType](docs/PostBasicMarketListDataItemsType.md)
 - [PostBasicMarketListRequest](docs/PostBasicMarketListRequest.md)
 - [PostBasicMarketListRequestData](docs/PostBasicMarketListRequestData.md)
 - [PostBasicMarketListRequestDataFilter](docs/PostBasicMarketListRequestDataFilter.md)
 - [PostBasicMarketListRequestDataFilterMarkets](docs/PostBasicMarketListRequestDataFilterMarkets.md)
 - [PostBasicMarketListRequestMeta](docs/PostBasicMarketListRequestMeta.md)
 - [PostBasicMarketListRequestMetaPagination](docs/PostBasicMarketListRequestMetaPagination.md)
 - [PostBasicMediaTypeListDataItems](docs/PostBasicMediaTypeListDataItems.md)
 - [PostBasicMediaTypeListDataItemsKind](docs/PostBasicMediaTypeListDataItemsKind.md)
 - [PostBasicMediaTypeListRequest](docs/PostBasicMediaTypeListRequest.md)
 - [PostBasicMediaTypeListRequestData](docs/PostBasicMediaTypeListRequestData.md)
 - [PostBasicMediaTypeListRequestDataFilter](docs/PostBasicMediaTypeListRequestDataFilter.md)
 - [PostBasicMediaTypeListRequestMeta](docs/PostBasicMediaTypeListRequestMeta.md)
 - [PostBasicMicOperatingListDataItems](docs/PostBasicMicOperatingListDataItems.md)
 - [PostBasicMicOperatingListRequest](docs/PostBasicMicOperatingListRequest.md)
 - [PostBasicMicOperatingListRequestData](docs/PostBasicMicOperatingListRequestData.md)
 - [PostBasicMicOperatingListRequestDataFilter](docs/PostBasicMicOperatingListRequestDataFilter.md)
 - [PostBasicMicOperatingListRequestMeta](docs/PostBasicMicOperatingListRequestMeta.md)
 - [PostBasicTimezoneListDataItems](docs/PostBasicTimezoneListDataItems.md)
 - [PostBasicTimezoneListRequest](docs/PostBasicTimezoneListRequest.md)
 - [PostBasicTimezoneListRequestData](docs/PostBasicTimezoneListRequestData.md)
 - [PostBasicTimezoneListRequestDataFilter](docs/PostBasicTimezoneListRequestDataFilter.md)
 - [PostBasicValueUnitCurrencyListDataItems](docs/PostBasicValueUnitCurrencyListDataItems.md)
 - [PostBasicValueUnitCurrencyListRequest](docs/PostBasicValueUnitCurrencyListRequest.md)
 - [PostBasicValueUnitCurrencyListRequestMeta](docs/PostBasicValueUnitCurrencyListRequestMeta.md)
 - [PostBasicValueUnitCurrencyMainListDataItems](docs/PostBasicValueUnitCurrencyMainListDataItems.md)
 - [PostBasicValueUnitCurrencyMainListRequest](docs/PostBasicValueUnitCurrencyMainListRequest.md)
 - [PostBasicValueUnitCurrencyMainListRequestData](docs/PostBasicValueUnitCurrencyMainListRequestData.md)
 - [PostBasicValueUnitCurrencyMainListRequestDataFilter](docs/PostBasicValueUnitCurrencyMainListRequestDataFilter.md)
 - [PostBasicValueUnitListDataItems](docs/PostBasicValueUnitListDataItems.md)
 - [PostBasicValueUnitListRequest](docs/PostBasicValueUnitListRequest.md)
 - [PostBasicValueUnitListRequestData](docs/PostBasicValueUnitListRequestData.md)
 - [PostBasicValueUnitListRequestDataFilter](docs/PostBasicValueUnitListRequestDataFilter.md)
 - [PostBasicValueUnitListRequestMeta](docs/PostBasicValueUnitListRequestMeta.md)
 - [PostNewsArticleListByChainDataArticlesCategoriesItems](docs/PostNewsArticleListByChainDataArticlesCategoriesItems.md)
 - [PostNewsArticleListByChainDataArticlesInstrumentsItems](docs/PostNewsArticleListByChainDataArticlesInstrumentsItems.md)
 - [PostNewsArticleListByChainDataArticlesItems](docs/PostNewsArticleListByChainDataArticlesItems.md)
 - [PostNewsArticleListByChainDataArticlesItemsLanguage](docs/PostNewsArticleListByChainDataArticlesItemsLanguage.md)
 - [PostNewsArticleListByChainDataArticlesTypesItems](docs/PostNewsArticleListByChainDataArticlesTypesItems.md)
 - [PostNewsArticleListByChainRequest](docs/PostNewsArticleListByChainRequest.md)
 - [PostNewsArticleListByChainRequestData](docs/PostNewsArticleListByChainRequestData.md)
 - [PostNewsArticleListByChainRequestDataFilter](docs/PostNewsArticleListByChainRequestDataFilter.md)
 - [PostNewsArticleListByChainRequestDataFilterRange](docs/PostNewsArticleListByChainRequestDataFilterRange.md)
 - [PostNewsArticleListByChainRequestMeta](docs/PostNewsArticleListByChainRequestMeta.md)
 - [PostNewsArticleListByChainRequestMetaSubscription](docs/PostNewsArticleListByChainRequestMetaSubscription.md)
 - [PostNewsArticleListByIndexDataArticlesCategoriesItems](docs/PostNewsArticleListByIndexDataArticlesCategoriesItems.md)
 - [PostNewsArticleListByIndexDataArticlesInstrumentsItems](docs/PostNewsArticleListByIndexDataArticlesInstrumentsItems.md)
 - [PostNewsArticleListByIndexDataArticlesItems](docs/PostNewsArticleListByIndexDataArticlesItems.md)
 - [PostNewsArticleListByIndexDataArticlesItemsChain](docs/PostNewsArticleListByIndexDataArticlesItemsChain.md)
 - [PostNewsArticleListByIndexDataArticlesItemsDistributor](docs/PostNewsArticleListByIndexDataArticlesItemsDistributor.md)
 - [PostNewsArticleListByIndexDataArticlesItemsLanguage](docs/PostNewsArticleListByIndexDataArticlesItemsLanguage.md)
 - [PostNewsArticleListByIndexDataArticlesItemsPublisher](docs/PostNewsArticleListByIndexDataArticlesItemsPublisher.md)
 - [PostNewsArticleListByIndexDataArticlesTypesItems](docs/PostNewsArticleListByIndexDataArticlesTypesItems.md)
 - [PostNewsArticleListByIndexDataIdentifiersItems](docs/PostNewsArticleListByIndexDataIdentifiersItems.md)
 - [PostNewsArticleListByIndexDataIdentifiersItemsStatus](docs/PostNewsArticleListByIndexDataIdentifiersItemsStatus.md)
 - [PostNewsArticleListByIndexRequest](docs/PostNewsArticleListByIndexRequest.md)
 - [PostNewsArticleListByIndexRequestData](docs/PostNewsArticleListByIndexRequestData.md)
 - [PostNewsArticleListByIndexRequestDataFilter](docs/PostNewsArticleListByIndexRequestDataFilter.md)
 - [PostNewsArticleListByIndexRequestDataFilterCategories](docs/PostNewsArticleListByIndexRequestDataFilterCategories.md)
 - [PostNewsArticleListByIndexRequestDataFilterDistributor](docs/PostNewsArticleListByIndexRequestDataFilterDistributor.md)
 - [PostNewsArticleListByIndexRequestDataFilterLanguage](docs/PostNewsArticleListByIndexRequestDataFilterLanguage.md)
 - [PostNewsArticleListByIndexRequestDataFilterPublisher](docs/PostNewsArticleListByIndexRequestDataFilterPublisher.md)
 - [PostNewsArticleListByIndexRequestDataFilterRegions](docs/PostNewsArticleListByIndexRequestDataFilterRegions.md)
 - [PostNewsArticleListByIndexRequestDataFilterTypes](docs/PostNewsArticleListByIndexRequestDataFilterTypes.md)
 - [PostNewsArticleListByIndexRequestDataIdentifier](docs/PostNewsArticleListByIndexRequestDataIdentifier.md)
 - [PostNewsArticleListByIndexRequestMeta](docs/PostNewsArticleListByIndexRequestMeta.md)
 - [PostNewsArticleListByIndexRequestMetaSubscription](docs/PostNewsArticleListByIndexRequestMetaSubscription.md)
 - [PostNewsArticleListByInstrumentDataArticlesCategoriesItems](docs/PostNewsArticleListByInstrumentDataArticlesCategoriesItems.md)
 - [PostNewsArticleListByInstrumentDataArticlesInstrumentsItems](docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItems.md)
 - [PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsym](docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsym.md)
 - [PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsymSecurity](docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsymSecurity.md)
 - [PostNewsArticleListByInstrumentDataArticlesItems](docs/PostNewsArticleListByInstrumentDataArticlesItems.md)
 - [PostNewsArticleListByInstrumentDataArticlesItemsChain](docs/PostNewsArticleListByInstrumentDataArticlesItemsChain.md)
 - [PostNewsArticleListByInstrumentDataArticlesItemsDistributor](docs/PostNewsArticleListByInstrumentDataArticlesItemsDistributor.md)
 - [PostNewsArticleListByInstrumentDataArticlesItemsLanguage](docs/PostNewsArticleListByInstrumentDataArticlesItemsLanguage.md)
 - [PostNewsArticleListByInstrumentDataArticlesItemsPublisher](docs/PostNewsArticleListByInstrumentDataArticlesItemsPublisher.md)
 - [PostNewsArticleListByInstrumentDataArticlesTypesItems](docs/PostNewsArticleListByInstrumentDataArticlesTypesItems.md)
 - [PostNewsArticleListByInstrumentDataIdentifiersItems](docs/PostNewsArticleListByInstrumentDataIdentifiersItems.md)
 - [PostNewsArticleListByInstrumentDataIdentifiersItemsStatus](docs/PostNewsArticleListByInstrumentDataIdentifiersItemsStatus.md)
 - [PostNewsArticleListByInstrumentRequest](docs/PostNewsArticleListByInstrumentRequest.md)
 - [PostNewsArticleListByInstrumentRequestData](docs/PostNewsArticleListByInstrumentRequestData.md)
 - [PostNewsArticleListByInstrumentRequestDataFilter](docs/PostNewsArticleListByInstrumentRequestDataFilter.md)
 - [PostNewsArticleListByInstrumentRequestDataFilterCategories](docs/PostNewsArticleListByInstrumentRequestDataFilterCategories.md)
 - [PostNewsArticleListByInstrumentRequestDataFilterDistributor](docs/PostNewsArticleListByInstrumentRequestDataFilterDistributor.md)
 - [PostNewsArticleListByInstrumentRequestDataFilterPublisher](docs/PostNewsArticleListByInstrumentRequestDataFilterPublisher.md)
 - [PostNewsArticleListByInstrumentRequestDataFilterRange](docs/PostNewsArticleListByInstrumentRequestDataFilterRange.md)
 - [PostNewsArticleListByInstrumentRequestDataIdentifier](docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md)
 - [PostNewsArticleListByInstrumentRequestMeta](docs/PostNewsArticleListByInstrumentRequestMeta.md)
 - [PostNewsArticleListByInstrumentRequestMetaSubscription](docs/PostNewsArticleListByInstrumentRequestMetaSubscription.md)
 - [PostNewsArticleListByMediaKindDataCategoriesItems](docs/PostNewsArticleListByMediaKindDataCategoriesItems.md)
 - [PostNewsArticleListByMediaKindDataInstrumentsItems](docs/PostNewsArticleListByMediaKindDataInstrumentsItems.md)
 - [PostNewsArticleListByMediaKindDataItems](docs/PostNewsArticleListByMediaKindDataItems.md)
 - [PostNewsArticleListByMediaKindDataItemsChain](docs/PostNewsArticleListByMediaKindDataItemsChain.md)
 - [PostNewsArticleListByMediaKindDataItemsDistributor](docs/PostNewsArticleListByMediaKindDataItemsDistributor.md)
 - [PostNewsArticleListByMediaKindDataItemsLanguage](docs/PostNewsArticleListByMediaKindDataItemsLanguage.md)
 - [PostNewsArticleListByMediaKindDataItemsPublisher](docs/PostNewsArticleListByMediaKindDataItemsPublisher.md)
 - [PostNewsArticleListByMediaKindDataTypesItems](docs/PostNewsArticleListByMediaKindDataTypesItems.md)
 - [PostNewsArticleListByMediaKindRequest](docs/PostNewsArticleListByMediaKindRequest.md)
 - [PostNewsArticleListByMediaKindRequestData](docs/PostNewsArticleListByMediaKindRequestData.md)
 - [PostNewsArticleListByMediaKindRequestDataFilter](docs/PostNewsArticleListByMediaKindRequestDataFilter.md)
 - [PostNewsArticleListByMediaKindRequestDataFilterDistributor](docs/PostNewsArticleListByMediaKindRequestDataFilterDistributor.md)
 - [PostNewsArticleListByMediaKindRequestDataFilterLanguage](docs/PostNewsArticleListByMediaKindRequestDataFilterLanguage.md)
 - [PostNewsArticleListByMediaKindRequestDataFilterPublisher](docs/PostNewsArticleListByMediaKindRequestDataFilterPublisher.md)
 - [PostNewsArticleListByMediaKindRequestDataFilterTypes](docs/PostNewsArticleListByMediaKindRequestDataFilterTypes.md)
 - [PostNewsArticleListByMediaKindRequestMeta](docs/PostNewsArticleListByMediaKindRequestMeta.md)
 - [PostNewsArticleListByMediaKindRequestMetaSubscription](docs/PostNewsArticleListByMediaKindRequestMetaSubscription.md)
 - [PostNewsArticleListDataCategoriesItems](docs/PostNewsArticleListDataCategoriesItems.md)
 - [PostNewsArticleListDataInstrumentsItems](docs/PostNewsArticleListDataInstrumentsItems.md)
 - [PostNewsArticleListDataItems](docs/PostNewsArticleListDataItems.md)
 - [PostNewsArticleListDataItemsChain](docs/PostNewsArticleListDataItemsChain.md)
 - [PostNewsArticleListDataTypesItems](docs/PostNewsArticleListDataTypesItems.md)
 - [PostNewsArticleListRequest](docs/PostNewsArticleListRequest.md)
 - [PostNewsArticleListRequestData](docs/PostNewsArticleListRequestData.md)
 - [PostNewsArticleListRequestDataFilter](docs/PostNewsArticleListRequestDataFilter.md)
 - [PostNewsArticleListRequestDataFilterCategories](docs/PostNewsArticleListRequestDataFilterCategories.md)
 - [PostNewsArticleListRequestDataFilterDistributor](docs/PostNewsArticleListRequestDataFilterDistributor.md)
 - [PostNewsArticleListRequestDataFilterLanguage](docs/PostNewsArticleListRequestDataFilterLanguage.md)
 - [PostNewsArticleListRequestDataFilterPublisher](docs/PostNewsArticleListRequestDataFilterPublisher.md)
 - [PostNewsArticleListRequestDataFilterRange](docs/PostNewsArticleListRequestDataFilterRange.md)
 - [PostNewsArticleListRequestDataFilterRegions](docs/PostNewsArticleListRequestDataFilterRegions.md)
 - [PostNewsArticleListRequestDataFilterTypes](docs/PostNewsArticleListRequestDataFilterTypes.md)
 - [PostNewsArticleListRequestMeta](docs/PostNewsArticleListRequestMeta.md)
 - [PostNewsArticleListRequestMetaPagination](docs/PostNewsArticleListRequestMetaPagination.md)
 - [PostNewsArticleListRequestMetaSubscription](docs/PostNewsArticleListRequestMetaSubscription.md)
 - [PostNewsArticleSearchByTextDataCategoriesItems](docs/PostNewsArticleSearchByTextDataCategoriesItems.md)
 - [PostNewsArticleSearchByTextDataCriteriaItems](docs/PostNewsArticleSearchByTextDataCriteriaItems.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsCategories](docs/PostNewsArticleSearchByTextDataCriteriaItemsCategories.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsDistributor](docs/PostNewsArticleSearchByTextDataCriteriaItemsDistributor.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsIndices](docs/PostNewsArticleSearchByTextDataCriteriaItemsIndices.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsInstruments](docs/PostNewsArticleSearchByTextDataCriteriaItemsInstruments.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsLanguage](docs/PostNewsArticleSearchByTextDataCriteriaItemsLanguage.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsPublisher](docs/PostNewsArticleSearchByTextDataCriteriaItemsPublisher.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsRegions](docs/PostNewsArticleSearchByTextDataCriteriaItemsRegions.md)
 - [PostNewsArticleSearchByTextDataCriteriaItemsTypes](docs/PostNewsArticleSearchByTextDataCriteriaItemsTypes.md)
 - [PostNewsArticleSearchByTextDataInstrumentsItems](docs/PostNewsArticleSearchByTextDataInstrumentsItems.md)
 - [PostNewsArticleSearchByTextDataItems](docs/PostNewsArticleSearchByTextDataItems.md)
 - [PostNewsArticleSearchByTextDataItemsPublisher](docs/PostNewsArticleSearchByTextDataItemsPublisher.md)
 - [PostNewsArticleSearchByTextDataTypesItems](docs/PostNewsArticleSearchByTextDataTypesItems.md)
 - [PostNewsArticleSearchByTextRequest](docs/PostNewsArticleSearchByTextRequest.md)
 - [PostNewsArticleSearchByTextRequestData](docs/PostNewsArticleSearchByTextRequestData.md)
 - [PostNewsArticleSearchByTextRequestDataText](docs/PostNewsArticleSearchByTextRequestDataText.md)
 - [PostNewsArticleSearchByTextRequestDataTextCriteria](docs/PostNewsArticleSearchByTextRequestDataTextCriteria.md)
 - [PostNewsArticleSearchByTextRequestMeta](docs/PostNewsArticleSearchByTextRequestMeta.md)
 - [PostNewsArticleSearchByTextRequestMetaSubscription](docs/PostNewsArticleSearchByTextRequestMetaSubscription.md)
 - [PostNewsPublisherSearchByNameDataItems](docs/PostNewsPublisherSearchByNameDataItems.md)
 - [PostNewsPublisherSearchByNameRequest](docs/PostNewsPublisherSearchByNameRequest.md)
 - [PostNewsPublisherSearchByNameRequestData](docs/PostNewsPublisherSearchByNameRequestData.md)
 - [PostNewsPublisherSearchByNameRequestDataFilter](docs/PostNewsPublisherSearchByNameRequestDataFilter.md)
 - [PostNewsPublisherSearchByNameRequestDataFilterDelivery](docs/PostNewsPublisherSearchByNameRequestDataFilterDelivery.md)
 - [PostNewsPublisherSearchByNameRequestDataFilterDistributor](docs/PostNewsPublisherSearchByNameRequestDataFilterDistributor.md)
 - [PostNewsPublisherSearchByNameRequestMeta](docs/PostNewsPublisherSearchByNameRequestMeta.md)
 - [StatusObject](docs/StatusObject.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
